# dspy_agents

./: .env_local  README.md  pyproject.toml
assets/css/: main.css
assets/js/: error.js  main.js
dspy_agents/: config.py  logger.py
dspy_agents/real_estate/: __init__.py  webapp.py
dspy_agents/real_estate/agent/: CallbackReAct.py  simple_agent.py
dspy_agents/real_estate/model/: property.py
dspy_agents/real_estate/test/: __init__.py  test_simple_agent.py
dspy_agents/real_estate/tools/: tools.py
prompts/: real_estate.txt
