[tool.poetry]
name = "dspy-agents"
version = "0.1.0"
description = "Example project with DSPY Agents."
authors = ["Gil Fernandes <gil.fernandes@onepointltd.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dspy_agents"}]

[tool.poetry.dependencies]
python = "^3.12"
dspy = "^2.5.39"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
python-fasthtml = "^0.10.1"
markdown = "^3.7"
asyncer = "^0.0.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
